--- a/catalog.html
+++ b/catalog.html
@@ -25,21 +25,21 @@
 <div class="container mt-4">
 
 
-  <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
+  <ul class="flex-js-c gap-1 mb-7">
     <li>
-      <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Главная</a>
+      <a href="home.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Главная</a>
     </li>
     <li class="text-[15px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Каталог</a>
+      <a href="catalog.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Каталог</a>
     </li>
     <li class="text-[15px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Катушки</a>
+      <a href="catalog.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-[#009FFF]">Катушки</a>
     </li>
   </ul>
 
