--- a/home-moneu-opened.html
+++ b/home-moneu-opened.html
@@ -49,8 +49,8 @@
       </a>
 
       <div class="flex-jsb-c gap-4">
-        <button class="bg-blue rounded-[8px] px-6 h-[50px] flex-jsb-c gap-3 text-white hover:bg-blue/80 transition">
-          <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
+        <button class="bg-[#CF301B] rounded-[8px] px-6 h-[50px] flex-jsb-c gap-3 text-white hover:bg-blue/80 transition">
+          <img src="img/icons/xmark.svg" alt="menu-catalog" class="brightness-[9]">
           Каталог
         </button>
         <form action="#" class="w-[486px] bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
@@ -108,22 +108,7 @@
 
   <div class="w-full h-[calc(100dvh-162px)] absolute left-0 top-[100%] bg-black/50"></div>
 
-  <style>
-    .custom-scroll::-webkit-scrollbar {
-  width: 6px;
-}
-.custom-scroll::-webkit-scrollbar-track {
-  background: transparent;
-}
-.custom-scroll::-webkit-scrollbar-thumb {
-  background-color: #949596;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-.custom-scroll:hover::-webkit-scrollbar-thumb {
-  background-color: #718096;
-}
-  </style>
+
 
   <div class="w-[489px] h-[calc(100dvh-162px)] bg-white absolute left-0 top-[100%]
    pl-[100px] overflow-y-auto custom-scroll pb-[100px] border-r border-r-[#D7DBDF]">
@@ -133,49 +118,49 @@
 
     <ul class="w-full">
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Удилища
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Аксессуары
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Катушки
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Зимняя рыбалка
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Оснастка
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Приманки
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Экипировка
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Туризм
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
@@ -188,43 +173,43 @@
 
     <ul class="w-full">
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Джиг
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Ультралайт
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Пелагическая ловля
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Бигбейлы
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Ловля форели
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Ловля лосося
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Фидер, карп и поплавок
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
@@ -237,37 +222,37 @@
 
     <ul class="w-full">
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Карп
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Сазан
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Язь
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Сом
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Карась
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           Щука
           <img src="img/icons/arrow-right.svg" alt="">
         </a>
@@ -279,7 +264,7 @@
 
     <ul class="w-full">
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           <div class="flex-js-c gap-2">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 19.25C8 19.25 4.75 16 4.75 12C4.75 8 8 4.75 12 4.75C16 4.75 19.25 8 19.25 12C19.25 16 16 19.25 12 19.25ZM12 6.25C8.83 6.25 6.25 8.83 6.25 12C6.25 15.17 8.83 17.75 12 17.75C15.17 17.75 17.75 15.17 17.75 12C17.75 8.83 15.17 6.25 12 6.25Z" fill="#323232"/>
@@ -292,7 +277,7 @@
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           <div class="flex-js-c gap-2">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M8.80602 19.71H6.47102C5.26702 19.71 4.29002 18.734 4.29002 17.529V16.097C4.29002 15.519 4.06002 14.964 3.65102 14.555L2.63802 13.542C1.78602 12.69 1.78602 11.31 2.63802 10.458L3.65102 9.44502C4.06002 9.03602 4.29002 8.48202 4.29002 7.90302V6.47102C4.29002 5.26702 5.26602 4.29002 6.47102 4.29002H7.90302C8.48102 4.29002 9.03602 4.06002 9.44502 3.65102L10.458 2.63802C11.31 1.78602 12.69 1.78602 13.542 2.63802L14.555 3.65102C14.964 4.06002 15.519 4.29002 16.097 4.29002H17.529C18.733 4.29002 19.71 5.26602 19.71 6.47102V7.90302C19.71 8.48102 19.94 9.03602 20.349 9.44502L21.362 10.458C22.214 11.31 22.214 12.69 21.362 13.542L20.349 14.555C19.94 14.964 19.71 15.519 19.71 16.097V17.529C19.71 18.733 18.734 19.71 17.529 19.71H16.097C15.519 19.71 14.964 19.94 14.555 20.349L13.542 21.362C12.69 22.214 11.31 22.214 10.458 21.362L8.80602 19.71Z" stroke="#CF301B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -307,7 +292,7 @@
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           <div class="flex-js-c gap-2">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0001 17.0021V17.0021C12.159 17.002 12.2932 16.8844 12.3143 16.727L12.4623 15.6205C12.6817 13.9756 13.9757 12.6815 15.6206 12.4622L16.7271 12.3141C16.8845 12.2931 17.0021 12.1588 17.0022 12V12C17.0021 11.8412 16.8845 11.7069 16.7271 11.6859L15.6206 11.5378C13.9757 11.3185 12.6817 10.0244 12.4623 8.3795L12.3143 7.27304C12.2932 7.11561 12.159 6.99803 12.0001 6.99792V6.99792C11.8413 6.99803 11.707 7.11561 11.686 7.27304L11.5379 8.3795C11.3186 10.0244 10.0245 11.3185 8.37962 11.5378L7.27316 11.6859C7.11573 11.7069 6.99815 11.8412 6.99805 12V12C6.99815 12.1588 7.11573 12.2931 7.27316 12.3141L8.37962 12.4622C10.0245 12.6815 11.3186 13.9756 11.5379 15.6205L11.686 16.727C11.707 16.8844 11.8413 17.002 12.0001 17.0021V17.0021Z" stroke="#336B46" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -320,7 +305,7 @@
         </a>
       </li>
       <li class="w-full">
-        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px]">
+        <a href="#" class="w-full flex-jsb-c pr-6 h-[48px] transition hover:text-blue">
           <div class="flex-js-c gap-2">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M21.0038 12C21.0038 16.9726 16.9727 21.0037 12.0001 21.0037C7.02745 21.0037 2.99634 16.9726 2.99634 12C2.99634 7.02733 7.02745 2.99622 12.0001 2.99622" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -340,7 +325,7 @@
 
   </div>
 
-  <div class="min-w-[600px] bg-white absolute left-[490px] top-[112px] p-8">
+  <div class="min-w-[600px] bg-white absolute left-[489px] top-[112px] p-8">
     <h4 class="text-[32px] font-medium">Удилища</h4>
 
     <div class="w-full flex-jsb-s mt-6 gap-8">
@@ -349,52 +334,52 @@
           Категории
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Удочки
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Вершинки для удилищ
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Удилища маховые
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Удилища болонские
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги ультралайт
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги джиговые
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги кастинговые
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги Maximus
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Удилища фидерные
           </a>
         </li>
@@ -404,37 +389,37 @@
           Популярные разделы
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спиннинги ультралайт
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Фидерные удилища
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Троллинговые удилища
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Болонское удилище
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Маховая удочка
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спининг универсальный
           </a>
         </li>
         <li class="mb-2">
-          <a href="#">
+          <a href="#" class="transition hover:text-blue">
             Спининг для джига
           </a>
         </li>
@@ -459,7 +444,7 @@
         </div>
       </div>
 
-      <div class="w-[443px] h-[353px] overflow-hidden rounded-[16px] p-8 relative">
+      <div class="w-[443px] h-[353px] hidden min-[1800px]:block overflow-hidden rounded-[16px] p-8 relative">
         <img src="img/menu-banner.png" alt="menu-banner.png" class="w-full h-full object-cover absolute left-0 top-0">
 
         <div class="relative z-10">
