--- a/modal-select-country.html
+++ b/modal-select-country.html
@@ -1838,21 +1838,21 @@
     <div class="bg-white rounded-2xl p-6 w-full max-w-md relative">
 
       <button class="absolute top-4 right-4">
-        <img src="img/icons/xmark.svg" alt="Փակել">
+        <img src="img/icons/xmark.svg" alt="close" class="hover:brightness-[0]">
       </button>
 
       <h2 class="text-[24px] sm:text-[32px] font-medium mb-4">Выберите город</h2>
 
-      <label class="relative mb-2">
+      <label class="relative mb-2 block w-full">
         <input
             type="text"
             placeholder="Поиск по сайту"
-            class="w-full border rounded-[8px] py-2 pl-4 pr-10 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full border rounded-[8px] py-2 pl-4 pr-10 focus:outline-none focus:ring-2 focus:ring-blue-500 block"
         />
         <img
             src="img/icons/search-blue.svg"
-            alt="Որոնել"
-            class="absolute right-3 top-1/2 -translate-y-1/2 w-5 h-5"
+            alt="search"
+            class="absolute right-3 top-1/2 -translate-y-1/2 w-5 min-w-5 max-w-5 h-5"
         />
       </label>
 
