--- a/modal-send-reqest.html
+++ b/modal-send-reqest.html
@@ -1836,7 +1836,7 @@
   <div class="relative bg-blue text-white rounded-[16px] w-full min-[870px]:max-w-[854px] p-6 md:p-10">
 
     <button class="absolute top-4 right-4">
-      <img src="img/icons/xmark.svg" alt="Փակել" class="w-5 h-5 brightness-[2.5]" />
+      <img src="img/icons/xmark.svg" alt="close" class="w-5 h-5 brightness-[2.5] hover:brightness-[0] transition" />
     </button>
 
     <h2 class="text-[32px] sm:text-[44px] md:text-[64px] leading-tight mb-2 font-lena text-white mt-4 sm:mt-0">
@@ -1876,7 +1876,7 @@
           Отправить
         </button>
 
-        <p class="text-[13px] text-white/80 leading-snug">
+        <p class="text-[13px] text-white/80 leading-snug order-1 sm:order-2">
           Нажимая кнопку «Отправить» вы принимаете политику
           <a href="#" class="underline">конфиденциальности</a> и даете согласие на обработку
           ваших персональных данных
