--- a/payment-delivery.html
+++ b/payment-delivery.html
@@ -26,21 +26,21 @@
 <div class="container mt-4">
 
 
-  <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
+  <ul class="flex-js-c gap-1 mb-7">
     <li>
-      <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
     <li class="text-[18px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[15px] text-[#6E6E6E] hover:text-blue">Покупателям</a>
+      <a href="catalog.html" class="text-[14px] sm:text-[15px] text-[#6E6E6E] hover:text-blue">Покупателям</a>
     </li>
     <li class="text-[18px] text-[#6E6E6E]">
         •
       </li>
     <li>
-      <a href="catalog.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Оплата и доставка</a>
+      <a href="catalog.html" class="text-[14px] sm:text-[18px] text-[#6E6E6E] hover:text-blue">Оплата и доставка</a>
     </li>
   </ul>
 
@@ -53,23 +53,20 @@
       <div class="flex gap-2 max-[767px]:overflow-x-auto " 
       style="scrollbar-width: none; -ms-overflow-style: none;">
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all bg-[#009FFF] text-[#fff]"
             data-tab="tab1"
-            style="background-color: #009FFF; color: #fff"
         >
         Доставка
         </button>
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all bg-[#F2F2F2] hover:bg-[#aaaaa9b3]/50 text-[#000]"
             data-tab="tab2"
-            style="background-color: #F2F2F2; color: #000"
         >
         Оплата
         </button>
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all bg-[#F2F2F2] hover:bg-[#aaaaa9b3]/50 text-[#000]"
             data-tab="tab3"
-            style="background-color: #F2F2F2; color: #000"
         >
         Обмен и возврат
         </button>
