--- a/variants-popup.html
+++ b/variants-popup.html
@@ -1905,141 +1905,19 @@
             <span class="text-[#6e6e6e] text-[18px] mr-[4px]">Цвет:</span>
             <b class="text-[#323232] text-[18px] font-medium">Tg</b>
         </div>
-        <form class="grid grid-cols-6 gap-[10px] mb-[24px] max-[767px]:grid-cols-4">
-            <label class="cursor-pointer">
+        <form class="grid grid-cols-5 gap-[10px] mb-[24px] max-[767px]:grid-cols-4">
+            <label class="cursor-pointer" data-for="32">
               <input type="radio" name="color" class="sr-only peer" checked />
               <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
                 <img src="img/pr-cmall-img.png" alt="Цвет 1" />
               </div>
             </label>
-          
-            <label class="cursor-pointer">
-              <input type="radio" name="color" class="sr-only peer" />
-              <div class="border-2 rounded-md p-2 peer-checked:border-[#007bff]">
-                <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-              </div>
-            </label>
-            <label class="cursor-pointer">
-              <input type="radio" name="color" class="sr-only peer" />
-              <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-              </div>
-            </label>
-            <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-              <label class="cursor-pointer">
-                <input type="radio" name="color" class="sr-only peer" />
-                <div class="border-2 rounded-md p-[4px] peer-checked:border-[#007bff]">
-                  <img src="img/pr-cmall-img.png" alt="Цвет 2" />
-                </div>
-              </label>
-          
-            <!-- Добавляй остальные кнопки по аналогии -->
+
           </form>
         <div class="flex mt-[10px]">
-            <button class="bg-[#009FFF] text-[16px] font-bold text-[#fff] rounded-[8px]
+            <button class="bg-[#009FFF] transition hover:bg-[#009FFF]/80 text-[16px] font-bold text-[#fff] rounded-[8px]
             py-[8px] px-[24px] mr-[10px]">Выбрать</button>
-            <button class="bg-[rgba(0,159,255,0.2)] text-[16px] font-bold text-[#009FFF] rounded-[8px]
+            <button class="bg-[rgba(0,159,255,0.2)] transition hover:bg-[rgba(0,159,255,0.4)] text-[16px] font-bold text-[#009FFF] rounded-[8px]
             py-[8px] px-[24px] mr-[10px]">Отмена</button>
         </div>
 
